--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
       "last 1 safari version"
     ]
   },
+  "devDependencies": {
+    "gh-pages": "^3.2.0"
+  },
   "homepage": "https://phantuanminh.github.io"
 }
